--- a/src/main/resources/templates/gestion/usuarios/detalle.html
+++ b/src/main/resources/templates/gestion/usuarios/detalle.html
@@ -103,7 +103,7 @@
 
     <div th:replace="~{fragments/menu :: pie}"></div>
 
-	<!-- <th:block th:replace="~{fragments/scripts :: scripts}"></th:block> -->
+	<th:block th:replace="~{fragments/scripts :: scripts}"></th:block>
     
 </body>
 </html>
