--- a/src/main/resources/templates/inicio.html
+++ b/src/main/resources/templates/inicio.html
@@ -36,10 +36,11 @@
 
          <!-- MOSTRAR ESTO SI HAY SESIÓN -->
         <div sec:authorize="isAuthenticated()">
-            <h1 class="mb-4">
-                <i class="fa-solid fa-magnifying-glass text-secondary"></i>
-                Buscador de alojamientos
+            <h1>
+            <i class="fa-solid fa-bed text-secondary"></i>
+            Buscador de alojamientos
             </h1>
+            <hr>
 
             <div class="tab-content">
 
