Funcionalidad de valoraciones

--- a/src/main/resources/templates/fragments/menu.html
+++ b/src/main/resources/templates/fragments/menu.html
@@ -54,6 +54,11 @@
 										<i class="fa-solid fa-chart-bar"></i> Estadísticas
 									</a>
 								</li>
+								<li>
+									<a class="dropdown-item" th:href="@{/valoraciones/lista}">
+										<i class="fa-solid fa-star"></i> Valoraciones
+									</a>
+								</li>
 							</ul>
 						</li>
 					</div>
