--- a/src/main/resources/static/css/gestor.css
+++ b/src/main/resources/static/css/gestor.css
@@ -51,3 +51,12 @@
 .btn-verde:hover {
     background-color: #218838; /* verde más oscuro al pasar el mouse */
 }
+
+.custom-hover {
+    border: 1px solid #000;
+}
+.custom-hover:hover {
+    background-color: #e0a800; /* amarillo más oscuro al hover */
+    color: #fff; /* opcional: texto blanco al hover */
+    transition: background-color 0.2s ease-in-out;
+}
