--- a/src/main/resources/templates/reserva.html
+++ b/src/main/resources/templates/reserva.html
@@ -20,8 +20,8 @@
                     <!-- Fecha Inicio -->
                     <div class="col-md-6">
                         <label class="form-label">Fecha Inicio <span class="text-danger">*</span></label>
-                        <div id="fechaInicio" class="input-group" data-td-target-input="nearest" data-td-target-toggle="nearest">
-                            <input id="fechaInicioInput" name="fechaInicio" th:field="*{fechaInicio}" type="text" class="form-control" data-td-target="#fechaInicio"/>
+                        <div id="fechaInicioInput" class="input-group" data-td-target-input="nearest" data-td-target-toggle="nearest">
+                            <input id="fechaInicio" name="fechaInicio" th:field="*{fechaInicio}" type="text" class="form-control" data-td-target="#fechaInicio" autocomplete="off"/>
                             <span class="input-group-text" data-td-target="#fechaInicio" data-td-toggle="datetimepicker">
                                 <span class="fa-solid fa-calendar"></span>
                             </span>
@@ -32,8 +32,8 @@
                     <!-- Fecha Fin -->
                     <div class="col-md-6">
                         <label class="form-label">Fecha Fin <span class="text-danger">*</span></label>
-                        <div id="fechaFin" class="input-group" data-td-target-input="nearest" data-td-target-toggle="nearest">
-                            <input id="fechaFinInput" name="fechaFin" th:field="*{fechaFin}" type="text" class="form-control" data-td-target="#fechaFin"/>
+                        <div id="fechaFinInput" class="input-group" data-td-target-input="nearest" data-td-target-toggle="nearest">
+                            <input id="fechaFin" name="fechaFin" th:field="*{fechaFin}" type="text" class="form-control" data-td-target="#fechaFin" autocomplete="off"/>
                             <span class="input-group-text" data-td-target="#fechaFin" data-td-toggle="datetimepicker">
                                 <span class="fa-solid fa-calendar"></span>
                             </span>
