--- a/src/main/resources/templates/gestion/alojamientos/lista.html
+++ b/src/main/resources/templates/gestion/alojamientos/lista.html
@@ -13,6 +13,8 @@
             <i class="fa-solid fa-home text-secondary"></i> Alojamientos 
             <a class="btn btn-success btn-sm me-2" title="Nuevo alojamiento" th:href="@{/gestion/alojamientos/detalle}"><i class="fa-solid fa-plus"></i></a>
         </h1>
+
+        <div th:replace="~{fragments/mensajes :: mensajes-alerta (mensajeUsuario=${mensajeUsuario})}"></div>
         
         <table id="tablaAlojamientos" class="table table-sm table-striped table-hover" style="width:100%">
             <thead>
