--- a/src/main/resources/templates/fragments/menu.html
+++ b/src/main/resources/templates/fragments/menu.html
@@ -19,7 +19,7 @@
 				<ul class="navbar-nav ms-auto mb-2 mb-lg-0">
 
 					<div>
-						<li class="nav-item">
+						<li class="nav-item" sec:authorize="hasAnyRole('CLIENTE', 'ADMIN')">
 						<a class="nav-link" th:href="@{/inicio}"><i class="fa-solid fa-house"></i> Inicio</a>
 					</li>
 					</div>
