Nueva pantalla Inicio Propietario

--- a/src/main/resources/templates/gestion/usuarios/detalle.html
+++ b/src/main/resources/templates/gestion/usuarios/detalle.html
@@ -89,7 +89,7 @@
             
                     <div class="my-4 text-end">
                         <button type="submit" class="btn btn-success ms-2">Guardar</button>
-                        <a class="btn btn-outline-secondary ms-2" th:href="@{/gestion/usuarios/lista}">Cerrar</a>
+                        <a  sec:authorize="hasAnyRole('ADMIN','PROPIETARIO')" class="btn btn-outline-secondary ms-2" th:href="@{/gestion/usuarios/lista}">Cerrar</a>
                     </div>
                     
                 </form>
