--- a/src/main/resources/templates/reserva.html
+++ b/src/main/resources/templates/reserva.html
@@ -76,7 +76,7 @@
                             <!-- Precio total -->
                             <p><strong>Precio total:</strong> <span id="precioTotalCard" class="precio"  th:text="${#numbers.formatDecimal(reservaForm.precioTotal,1,2)} + ' €'"></span></p>
                         
-                            <button type="submit" class="btn btn-verde w-100">Confirmar Reserva</button>
+                            <button type="submit" class="btn btn-verde w-100">Solicitar Reserva</button>
                         </div>
                     </div>
                 </section>
