--- a/src/main/resources/templates/fragments/mensajes.html
+++ b/src/main/resources/templates/fragments/mensajes.html
@@ -1,34 +1,24 @@
-<html xmlns:th="http://www.thymeleaf.org">
-<body>
+
 
     <!-- ====================================================================================== -->
     <!-- Fragmento para mostrar mensajes de alerta                                              -->
     <!-- ====================================================================================== -->
+<th:block xmlns:th="http://www.thymeleaf.org" th:fragment="mensajes-alerta(mensajeUsuario)">
+ <div class="my-3" th:if="${mensajeUsuario != null and mensajeUsuario.tipo != null}">
+    <div class="alert alert-dismissible fade show"
+         th:classappend="${mensajeUsuario.tipo.name() == 'OK'} ? ' alert-success'
+                        : (${mensajeUsuario.tipo.name() == 'INFO'} ? ' alert-info'
+                        : (${mensajeUsuario.tipo.name() == 'AVISO'} ? ' alert-warning'
+                        : ' alert-danger'))"
+         role="alert">
 
-    <th:block th:fragment="mensajes-alerta (mensajeUsuario)">
-        <div class="my-3" th:if="${mensajeUsuario != null}" th:switch="${mensajeUsuario.tipo}" th:with="Tipo=${T(com.nayarasanchez.gestor_alojamientos.dto.view.MensajeUsuario.Tipo)}">
-            <div th:case="${Tipo.OK}" class="alert alert-success alert-dismissible fade show">
-                <i class="fa-solid fa-circle-check"></i>
-                <span class="ms-1" th:text="${mensajeUsuario.texto}"></span>
-                <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
-            </div>
-            <div th:case="${Tipo.INFO}" class="alert alert-info alert-dismissible fade show">
-                <i class="fa-solid fa-circle-info"></i>
-                <span class="ms-1" th:text="${mensajeUsuario.texto}"></span>
-                <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
-            </div>
-            <div th:case="${Tipo.AVISO}" class="alert alert-warning alert-dismissible fade show">
-                <i class="fa-solid fa-circle-exclamation"></i>
-                <span class="ms-1" th:text="${mensajeUsuario.texto}"></span>
-                <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
-            </div>
-            <div th:case="${Tipo.ERROR}" class="alert alert-danger alert-dismissible fade show">
-                <i class="fa-solid fa-circle-xmark"></i>
-                <span class="ms-1" th:text="${mensajeUsuario.texto}"></span>
-                <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
-            </div>
-        </div>
-    </th:block>
+      <i th:class="${mensajeUsuario.tipo.name() == 'OK'} ? 'fa-solid fa-circle-check'
+                 : (${mensajeUsuario.tipo.name() == 'INFO'} ? 'fa-solid fa-circle-info'
+                 : (${mensajeUsuario.tipo.name() == 'AVISO'} ? 'fa-solid fa-circle-exclamation'
+                 : 'fa-solid fa-circle-xmark'))"></i>
 
-
-</body>
+      <span class="ms-1" th:text="${mensajeUsuario.texto}"></span>
+      <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+    </div>
+  </div>
+</th:block>
