--- a/src/main/resources/templates/gestion/usuarios/detalle.html
+++ b/src/main/resources/templates/gestion/usuarios/detalle.html
@@ -14,13 +14,14 @@
 			<small th:if="${usuario.id != null}" class="text-secondary" th:text="${usuario.nombre}"></small> 
 		</h1>
 
-        <div th:replace="~{fragments/mensajes :: mensajes-alerta (mensajeUsuario=${mensajeUsuario})}"></div>
+        <div th:replace="fragments/mensajes :: mensajes-alerta(mensajeUsuario=${mensajeUsuario})"></div>
 
         <div class="tab-content">
 
             <section class="container my-3">
                 
-                <form th:action="${usuario.id == null} ? 'nuevo' : 'editar'" method="post" th:object="${usuario}">
+                <form th:action="${modoPerfil == true} ? @{/gestion/usuarios/perfil} : (${usuario.id == null} ? @{/gestion/usuarios/nuevo} : @{/gestion/usuarios/editar})"
+                    method="post" th:object="${usuario}">
 
                     <input type="hidden" name="id" th:field="*{id}" />
 
@@ -70,18 +71,34 @@
                         </div>
                     </div>
 
+                    <!-- Password -->
                     <div class="mb-3 row">
-                        <label for="login" class="col-sm-2 col-form-label">Contraseña <span class="text-danger">*</span></label>
+                        <label class="col-sm-2 col-form-label">
+                            Contraseña <span class="text-danger" th:if="${usuario.id == null}">*</span>
+                        </label>
                         <div class="col-sm-10">
-                            <input type="password" class="form-control" id="password" th:field="*{password}" th:errorclass="is-invalid" />
+                            <input type="password"
+                                class="form-control"
+                                id="password"
+                                th:field="*{password}"
+                                th:attr="required=${usuario.id == null}"
+                                autocomplete="new-password"/>
                             <div class="form-text" th:text="#{validation.password.politica}"></div>
                         </div>
                     </div>
 
+                    <!-- Confirmar password -->
                     <div class="mb-3 row">
-                        <label for="confirmarPassword" class="col-sm-2 col-form-label">Repetir contraseña <span class="text-danger">*</span></label>
+                        <label class="col-sm-2 col-form-label">
+                            Repetir contraseña <span class="text-danger" th:if="${usuario.id == null}">*</span>
+                        </label>
                         <div class="col-sm-10">
-                            <input type="password" class="form-control" id="confirmarPassword" name="confirmarPassword" />
+                            <input type="password"
+                                class="form-control"
+                                id="confirmarPassword"
+                                name="confirmarPassword"
+                                th:attr="required=${usuario.id == null}"
+                                autocomplete="new-password"/>
                         </div>
                     </div>
 
